--- a/app/components/Header/style.css
+++ b/app/components/Header/style.css
@@ -1,3 +1,12 @@
+#Header {
+  position: relative;
+  top: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #hdr-line {
   width: 80%;
   height: 4px;
@@ -8,4 +17,21 @@
     var(--color-2) 50%,
     transparent 100%
   );
+}
+
+#settings-menu {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  display: inline-block;
+}
+
+#settings-menu li {
+  display: inline-block;
+  padding: 0 5px;
+}
+
+#settings-menu img {
+  width: 20px;
+  height: 20px;
 }
