coolio made the switch to the react-vis graphing library from UBER
Former-commit-id: 03717e642202417c281e5989657aa41dcf5a6d68

--- a/app/CSS/style.global.scss
+++ b/app/CSS/style.global.scss
@@ -7,3 +7,5 @@
   src: url("./fonts/FranklinGothic-DemiCondensed.otf") format("truetype");
   font-family: "Franklin Gothic";
 }
+
+@import "~react-vis/dist/style";
