--- a/app/components/Market/style.css
+++ b/app/components/Market/style.css
@@ -7,18 +7,34 @@
   overflow: auto;
 }
 
+.exchangeUnitContainer {
+  width: 100%;
+}
+
 .marketInfoContainer {
-  display: grid;
-  grid-template-columns: auto auto;
-  /* max-height: 600px; */
+  display: flex;
+  flex-direction: row;
+  width: 100%;
 }
 
-.marketInfoContainer img {
+.excangeLogo {
   height: 75px;
-  grid-column: 1/3;
 }
 
-.marketInfoContainer canvas {
+/* .marketDepthOuter {
   min-width: 500px;
   max-width: 800px;
+} */
+
+.marketDepthInner {
+  position: relative;
+  flex: 1;
+  min-height: 300px;
+  max-width: 50%;
+}
+
+.infobox {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
