Basic styles and styleguide changes
Former-commit-id: 6b7d313c019093fb4e1e85777a3099accbb4cdeb

--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -1,3 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+@import "./base/normalize.css";
+@import "./base/grid.css";
+@import "./base/buttons.css";
+@import "./base/forms.css";
+@import "./base/palette.css";
+@import "./base/tables.css";
+@import "./base/text.css";
+
+@import "./controls/panel.css";
+@import "./controls/progress.css";
+@import "./controls/switch.css";
+
 @import "~font-awesome/css/font-awesome.css";
 @import "../components/Footer/style.css";
 @import "../components/Header/style.css";
@@ -7,12 +21,11 @@
 @import "../components/Market/style.css";
 @import "../components/Overview/style.css";
 @import "../components/SecurityLogin/style.css";
+@import "../components/StyleGuide/style.css";
 @import "../components/SendRecieve/style.css";
 @import "../components/Settings/style.css";
 @import "../components/Terminal/style.css";
 @import "../components/Transactions/style.css";
-
-@import "./base/text.css";
 
 :root {
   /* COLOR PALETTE VARIABLES */
@@ -21,11 +34,11 @@
   --color-3: #ffffff; /* <-- White */
 
   /* BACKGROUND IMAGE VARIABLES */
-  --background-main: linear-gradient(
+  --background-main-gradient: linear-gradient(
       rgba(17, 17, 17, 0.45),
       rgba(17, 17, 17, 0.45)
-    ),
-    url("https://images7.alphacoders.com/428/428134.jpg"); /* <-- Full Screen Background Image for Nexus Earth Theme */
+    );
+    --background-main-image:  url("https://images7.alphacoders.com/428/428134.jpg"); /* <-- Full Screen Background Image for Nexus Earth Theme */
 
   /* FONTS */
   --font-1: "Myriad Pro"; /* <-- Sourced Above in First @font-face*/
@@ -41,13 +54,43 @@ body {
   color: white;
   height: 100vh;
   background-color: #232c39;
-  background-image: var(--background-main);
-  font-family: Arial, Helvetica, Helvetica Neue, serif;
+  background-image: var(--background-main-gradient), var(--background-main-image);
+  /* font-family: Arial, Helvetica, Helvetica Neue, serif; */
+  font-family: 'Roboto', sans-serif;
   overflow-y: hidden;
 }
 
-#App {
+#app {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  margin: 0 auto;
+  flex-grow: 1;
+  
   display: flex;
   flex-direction: column;
-  align-items: center;
+  width: 100%;
+}
+
+#app-header {
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+#app-content {
+  flex-grow: 1;
+  overflow: auto;
+  padding: 0 2em;
+}
+
+#app-content-container {
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+#app-navigation {
+  flex-grow: 0;
+  flex-shrink: 0;
+  z-index: 1;
 }
