--- a/app/CSS/base/palette.css
+++ b/app/CSS/base/palette.css
@@ -7,7 +7,7 @@ Grid
 
 :root {
 	--color-1: #111;
-	--color-2: #222;
+	--color-2: #0ca4fb;
 	--color-3: #131722;
 	--color-4: #0ca4fb;
 	--color-5: #fff;
