--- a/app/CSS/base/text.css
+++ b/app/CSS/base/text.css
@@ -9,45 +9,45 @@ Text
 	--base-font-size: 1;
 	--line-height:  1.625;
 
-	--border-color: #fff;
+	--border-color: #556070;
 
 	--body-font-size: 1;
 	--body-font-color: #fff;
-	--body-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	--body-font-family: 'Roboto', sans-serif;;
 	--body-font-weight: normal;
 	
 	--header-font-color: inherit;
-	--header-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	--header-font-family: 'Roboto', sans-serif;;
 	--header-font-weight: bold;
 	
 	--h1-font-size: 3; /*3.4375;*/
 	--h1-font-color: #fff;
-	--h1-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	--h1-font-weight: 400;
+	--h1-font-family: 'Roboto', sans-serif;;
+	--h1-font-weight: 600;
 	
 	--h2-font-size: 2.25;
 	--h2-font-color: #fff;
-	--h2-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	--h2-font-weight: 400;
+	--h2-font-family: 'Roboto', sans-serif;;
+	--h2-font-weight: 600;
 	
 	--h3-font-size: 1.75;
 	--h3-font-color: #fff;
-	--h3-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	--h3-font-weight: 400;
+	--h3-font-family: 'Roboto', sans-serif;;
+	--h3-font-weight: 600;
 	
 	--h4-font-size: 1.125;
 	--h4-font-color: #fff;
-	--h4-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	--h4-font-family: 'Roboto', sans-serif;;
 	--h4-font-weight: 400;
 	
 	--h5-font-size: 1;
 	--h5-font-color: #fff;
-	--h5-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	--h5-font-family: 'Roboto', sans-serif;;
 	--h5-font-weight: 400;
 	
 	--h6-font-size: 1;
 	--h6-font-color: #fff;
-	--h6-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	--h6-font-family: 'Roboto', sans-serif;;
 	--h6-font-weight: 400;
 	
 	--mono-font-size: 1;
@@ -57,15 +57,15 @@ Text
 	
 	--pre-border-width: 1px;
 	--pre-border-style: solid;
-	--pre-border-color: #fff;
+	--pre-border-color: var(--border-color);
 	--pre-border-radius: 0;
-	--pre-background-color: var(--color-2);
+	--pre-background-color: var(--color-3);
 	
 	--code-border-width: 1px;
 	--code-border-style: solid;
-	--code-border-color: #fff;
+	--code-border-color: var(--border-color);
 	--code-border-radius: 0;
-	--code-background-color: var(--color-2);
+	--code-background-color: var(--color-3);
 
 	--link-color: var(--color-4);
 	--link-text-decoration: none;
