--- a/app/components/Footer/style.css
+++ b/app/components/Footer/style.css
@@ -1,10 +1,12 @@
 #Footer {
-  position: fixed;
+  /* position: fixed;
   bottom: 0;
-  width: 100%;
+  width: 100%; */
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-shrink: 0;
+  flex-grow: 0;
 }
 
 #ftr-line {
@@ -24,6 +26,17 @@
   justify-content: space-between;
 }
 
+#navigation a {
+  display: block;
+  filter: grayscale(1) brightness(200%);
+}
+
+#navigation a:hover {
+  display: block;
+  filter: grayscale(0);
+}
+
 #navigation img {
-  margin: 5px;
+  display: block;
+  margin: .625em;
 }
