--- a/app/CSS/controls/panel.css
+++ b/app/CSS/controls/panel.css
@@ -14,7 +14,7 @@ Panel
 }
 
 .panel {
-	margin: auto;
+	/* margin: auto; */
 	box-sizing: border-box;
 	position: relative;
 	/* min-width: 300px; */
@@ -35,13 +35,14 @@ Panel
 	display: block;
 	position: absolute;
 	content: "";
-	width: 110%;
-	height: 110%;
+	width: 100%;
+	height: 100%;
 	top: 0;
 	left: 0;
 	background: inherit;
 	filter: blur(6px);
 	margin: -5%;
+	z-index: 0;
   }
 
 .panel .panel {
