--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -11,6 +11,7 @@
 @import "./controls/panel.css";
 @import "./controls/progress.css";
 @import "./controls/switch.css";
+@import "./controls/tooltip.css";
 
 @import "~font-awesome/css/font-awesome.css";
 @import "../components/Footer/style.css";
