--- a/app/components/Settings/style.css
+++ b/app/components/Settings/style.css
@@ -67,7 +67,7 @@ section {
 	padding-bottom: calc(var(--gutter));
 }
 
-@media (min-width: 800px) {
+/* @media (min-width: 800px) {
 	section {--column-width: 2;}
 }
 
@@ -77,7 +77,7 @@ section {
 
 @media (min-width: 1600px) {
 	section {--column-width: 4;}
-}
+} */
 
 /*
 Form
