cool lets figure out this alert deal
Former-commit-id: 441ae75de981c9adc2bd7adc5913574db7616229

--- a/app/components/Header/style.css
+++ b/app/components/Header/style.css
@@ -52,7 +52,7 @@
   top: 28px;
   color: var(--color-1);
   right: 0;
-  background-color: var(--color-3);
+  background-color: white !important;
   visibility: hidden;
 }
 
