Change tooltip arrow size
Former-commit-id: 18b1e48af425104730709a3d80b40930dd379841

--- a/app/CSS/controls/tooltip.css
+++ b/app/CSS/controls/tooltip.css
@@ -4,7 +4,7 @@ Switch
 */
 
 :root {
-	--tooltip-background-color: #222;
+	--tooltip-background-color: #282828;
 	--tooltip-color: #ccc;
 }
 
@@ -14,45 +14,46 @@ Switch
     background-color: var(--tooltip-background-color);
     color: var(--tooltip-color);
     text-align: left;
-    border-radius: .125em;
+    border-radius: .25em;
     padding: .5em .75em;
     position: absolute;
-    box-shadow: 0 2px 20px rgba(0,0,0,0.5);
+    /* box-shadow: 0 2px 20px rgba(0,0,0,0.5); */
+    filter: drop-shadow(0 2px 10px rgba(0,0,0,0.5));
     z-index: 1;
 }
 
 .tooltip.top {
     bottom: 100%;
     left: 50%;
-    margin-bottom: 8px;             /* 2px spacing + pointer size from item being hovered */
+    margin-bottom: 12px;             /* 2px spacing + pointer size from item being hovered */
     transform: translateX(-50%); 
 }
 
 .tooltip.bottom {
     top: 100%;
     left: 50%;
-    margin-top: 8px;                /* 2px spacing + pointer size from item being hovered */
+    margin-top: 12px;                /* 2px spacing + pointer size from item being hovered */
     transform: translateX(-50%);     
 }
 
 .tooltip::after {
     content: "";
     position: absolute;
-    border-width: 6px;
+    border-width: 10px;
     border-style: solid;
 }
 
 .tooltip.bottom::after {
     bottom: 100%;
     left: 50%;
-    margin-left: -6px;
+    margin-left: -10px;
     border-color: transparent transparent var(--tooltip-background-color) transparent;
 }
 
 .tooltip.top::after {
     top: 100%;
     left: 50%;
-    margin-left: -6px;
+    margin-left: -10px;
     border-color: var(--tooltip-background-color) transparent transparent transparent;
 }
 
