--- a/app/components/BlockExplorer/style.css
+++ b/app/components/BlockExplorer/style.css
@@ -1,28 +1,15 @@
 #blockexplorer {
 	position: relative;
 	height: 100%;
-}
-
-#blockexplorer-container {
-	--example-border: 1px solid rgba(255,255,255,.1);
-	counter-reset: section;
-	text-align: left;
 	display: flex;
 	flex-direction: column;
-
-	/* this is needed to allow the header/panel to collapse to scrollbars */
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
 }
 
-#blockexplorer-container > h2 {
+#blockexplorer > h2 {
 	flex: 0;
 }
 
-#blockexplorer-container > div {
+#blockexplorer > .panel {
 	flex: 1;
 	overflow-y: auto;
 }
