--- a/app/components/List/style.css
+++ b/app/components/List/style.css
@@ -1,38 +1,25 @@
 #trustlist {
 	position: relative;
 	height: 100%;
-}
-
-#trustlist-container {
-	--example-border: 1px solid rgba(255,255,255,.1);
-	counter-reset: section;
-	text-align: left;
 	display: flex;
 	flex-direction: column;
-
-	/* this is needed to allow the header/panel to collapse to scrollbars */
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
 }
 
-#trustlist-container > h2 {
+#trustlist > h2 {
 	flex: 0;
 }
 
-#trustlist-container > div {
+#trustlist > .panel {
 	flex: 1;
-  overflow-y: auto;
-}
-
-#trustlist table {
-  margin: 0;
+	overflow-y: auto;
 }
 
 #trustlist #table-wrap {
   height: 100%;
   width: 100%;
   overflow-x: auto;
+}
+
+#trustlist table {
+  margin: 0;
 }
