Framing on Security component
Former-commit-id: 93fef45d07f8ee453725afb4ed42b32634ab3bfc

--- a/app/components/SecurityLogin/style.css
+++ b/app/components/SecurityLogin/style.css
@@ -1,28 +1,15 @@
 #securitylogin {
 	position: relative;
 	height: 100%;
-}
-
-#securitylogin-container {
-	--example-border: 1px solid rgba(255,255,255,.1);
-	counter-reset: section;
-	text-align: left;
 	display: flex;
 	flex-direction: column;
-
-	/* this is needed to allow the header/panel to collapse to scrollbars */
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
 }
 
-#securitylogin-container > h2 {
+#securitylogin > h2 {
 	flex: 0;
 }
 
-#securitylogin-container > div {
+#securitylogin > .panel {
 	flex: 1;
 	overflow-y: auto;
 }
