Move react-table styles to css folder instead of only on transactions
Former-commit-id: 0c7b31c57f736b628ce5a4ed338c61ef5df909f4

--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -10,6 +10,7 @@
 
 @import "./controls/panel.css";
 @import "./controls/progress.css";
+@import "./controls/react-table.css";
 @import "./controls/switch.css";
 @import "./controls/tabs.css";
 @import "./controls/tooltip.css";
