--- a/app/CSS/controls/panel.css
+++ b/app/CSS/controls/panel.css
@@ -26,7 +26,7 @@ Panel
 	background-attachment: fixed;
 	border: 1px solid rgba(0,0,0,0.1);
 	box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
-	text-shadow: 0 1px 3px rgba(0,0,0,0.4);
+	/* text-shadow: 0 1px 3px rgba(0,0,0,0.4); */
 	/* color: white; */
 	overflow: hidden;
 }
