coo stash this here wile i help bryan
Former-commit-id: 2244a81f69519b0adb6896ca031e619eacc4d225

--- a/app/components/Settings/style.css
+++ b/app/components/Settings/style.css
@@ -85,3 +85,9 @@ form {
   border: 2px dashed rgba(255, 255, 255, 0.2);
   background-color: rgba(0, 0, 0, 0.2);
 }
+
+#appSettingsContianer {
+  width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+}
