--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url("https://fonts.googleapis.com/css?family=Roboto");
 
 @import "./base/normalize.css";
 @import "./base/grid.css";
@@ -28,6 +28,7 @@
 @import "../components/Settings/style.css";
 @import "../components/Terminal/style.css";
 @import "../components/Transactions/style.css";
+@import "../components/Loader/style.css";
 
 :root {
   /* COLOR PALETTE VARIABLES */
@@ -40,14 +41,13 @@
       rgba(17, 17, 17, 0.45),
       rgba(17, 17, 17, 0.45)
     ); */
-    --background-main-gradient: linear-gradient(
-      rgba(17, 17, 17, 0),
-      rgba(17, 17, 17, 0)
-    );
-    /* --background-main-image:  url("https://images7.alphacoders.com/428/428134.jpg"); <-- Full Screen Background Image for Nexus Earth Theme */
-    --background-main-image:  url("../images/background/nexus-conference.png"); /* <-- Full Screen Background Image for Nexus Earth Theme */
- 
-    
+  --background-main-gradient: linear-gradient(
+    rgba(17, 17, 17, 0),
+    rgba(17, 17, 17, 0)
+  );
+  /* --background-main-image:  url("https://images7.alphacoders.com/428/428134.jpg"); <-- Full Screen Background Image for Nexus Earth Theme */
+  --background-main-image: url("../images/background/nexus-conference.png"); /* <-- Full Screen Background Image for Nexus Earth Theme */
+
   /* FONTS */
   --font-1: "Myriad Pro"; /* <-- Sourced Above in First @font-face*/
   --font-2: "Franklin Gothic"; /* <-- Sourced Above in Second @font-face */
@@ -62,9 +62,10 @@ body {
   color: white;
   height: 100vh;
   background-color: #232c39;
-  background-image: var(--background-main-gradient), var(--background-main-image);
+  background-image: var(--background-main-gradient),
+    var(--background-main-image);
   /* font-family: Arial, Helvetica, Helvetica Neue, serif; */
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   overflow-y: hidden;
 }
 
@@ -80,7 +81,7 @@ body {
   grid-template-areas:
     "header"
     "content"
-    "navigation"
+    "navigation";
 }
 
 #app-header {
@@ -112,25 +113,25 @@ body {
   height: 300px;
 }
 
-/* Scrollbar */ 
-::-webkit-scrollbar { 
-	width: 10px;
-  background: rgba(0,0,0,0.5);
- } 
-
-/* Track */ 
-::-webkit-scrollbar-track { 
-} 
-
-/* Handle */ 
-::-webkit-scrollbar-thumb { 
-  background: var(--color-2); 
-} 
-
-::-webkit-scrollbar-thumb:window-inactive { 
-	background: var(--color-2); 
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+  background: rgba(0, 0, 0, 0.5);
 }
 
-::-webkit-scrollbar-corner { 
-  background: rgba(0,0,0,0.5);
+/* Track */
+::-webkit-scrollbar-track {
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--color-2);
+}
+
+::-webkit-scrollbar-thumb:window-inactive {
+  background: var(--color-2);
+}
+
+::-webkit-scrollbar-corner {
+  background: rgba(0, 0, 0, 0.5);
 }
